@@ -1365,3 +1365,7 @@ SVN (Dave van der Locht)
 - Changed maintenance scripts to use build system's prefix path.
 [r218]
 - Corrected error message in initfwd.c
+[r219]
+- Removed private callsign check for SB command because of problems with
+  sending bulletins to destinations which validate with the private callsign
+  check (eg. 7PLUS@WW) 
